<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtAppTitle"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/result_text"
        android:textColor="@color/cardBgColor"
        android:textSize="35sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        app:cardCornerRadius="75dp"
        app:cardBackgroundColor="@color/trans"
        >
        <ImageView
            android:id="@+id/resultImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/congrats"
            android:layout_gravity="center">

        </ImageView>


    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CongratulationsText"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/CongratulationsText"
        android:textColor="@color/cardBgColor"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/usernmae"
        android:textColor="@color/cardBgColor"
        android:textSize="15dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/scoreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/score"
        android:textColor="@color/cardBgColor"
        android:textSize="15sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/finishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/option"
        android:textColor="@color/colorPrimary"
        android:text="Finish"/>

</LinearLayout>